--- a/tests/RazorLight.Tests/RazorLight.Tests.csproj
+++ b/tests/RazorLight.Tests/RazorLight.Tests.csproj
@@ -31,7 +31,8 @@
     <PackageReference Include="MarkdownSnippets.MsBuild" Version="18.0.0" />
     <PackageReference Include="Moq" Version="4.7.99" />
     <PackageReference Include="Pose" Version="1.2.1" />
-    <PackageReference Include="xunit" Version="2.3.1" />
+    <PackageReference Include="Verify.Xunit" Version="5.0.2" />
+    <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
 
