--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
   - sudo apt-get update
   - sudo apt-get install apt-transport-https
   - sudo apt-get update
+  - sudo apt-get install dotnet-sdk-3.1
   - sudo apt-get install dotnet-sdk-5.0
   
 env:  
