--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,17 @@
-language: csharp  
+language: csharp
 mono: none
-dotnet: 5.0.0
-dist: bionic
+dist: xenial
+addons:
+  snaps:
+    - name: dotnet-sdk
+      confinement: classic
+      channel: 5.0/stable
+        
+env:
+  global:
+    - DOTNET_SKIP_FIRST_TIME_EXPERIENCE=true
+    - DOTNET_CLI_TELEMETRY_OPTOUT=1
+  - IS_TESTING_ENVIRONMENT=true
 
 before_install:
   - wget -q https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
@@ -11,10 +21,13 @@ before_install:
   - sudo apt-get install apt-transport-https
   - sudo apt-get update
   - sudo apt-get install dotnet-sdk-3.1
-  - sudo apt-get install dotnet-sdk-5.0
-  
-env:  
-  - IS_TESTING_ENVIRONMENT=true
+
+install:
+    - export PATH="$PATH:/home/travis/.dotnet/tools"
+    - export PATH="$PATH:$HOME/.local/bin"
+    - sudo snap alias dotnet-sdk.dotnet dotnet
+    - chmod -R a+x scripts
+
 os:  
   - linux
 branches:  
